--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,24 @@ version: "3.9"
 services:
   hob_db:
     image: "postgres"
+    container_name: hob_db
+    networks:
+      - houseofbills
+    ports:
+      - "5432:5432"
     env_file:
       - database.env
   hob:
-    image: "vlasovartem/hob:v0.0.1"
+    build: .
+    container_name: hob
+    networks:
+      - houseofbills
     ports:
-      - "3000:3000"
+      - "3030:3030"
     env_file:
       - hob.env
     depends_on:
       - hob_db
+
+networks:
+  houseofbills:
